Fixed viewport too big issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,6 +99,9 @@ body {
 	-ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+	width: 100vw !important;
+	height: 100vh !important;
+	overflow: hidden;
 }
 
 article {
